[tool.poetry]
name = "nuldc"
version = "0.2.2"
description = ""
authors = ["davidschober <davidschob@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
unicodecsv = "^0.14.1"
docopt = "^0.6.2"
tqdm = "^4.64.1"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
pytest = "^7.2.0"
requests-mock = "^1.10.0"

[tool.poetry.scripts]
nuldc = 'nuldc.commandline:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
