[tool.poetry]
name = "nuldc"
version = "0.7.1"
description = ""
authors = ["davidschober <davidschob@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
requests = "^2.28.1"
unicodecsv = "^0.14.1"
docopt = "^0.6.2"
tqdm = "^4.64.1"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
pytest = "^7.2.0"
requests-mock = "^1.10.0"
dicttoxml = "^1.7.16"

[tool.poetry.scripts]
nuldc = 'nuldc.commandline:main'
nuldump = 'nuldc.dump:main'
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
